--- a/site/index.html
+++ b/site/index.html
@@ -2,46 +2,96 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8">
-    <title>Моя первая веб-страница</title>
+    <title>БыстроНовости</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header> 
-        <!-- Поле навигации -->
-        <nav>
-            <a href="#">Главная</a>
-            <a href="pages/about.html">О нас</a>
-            <a href="pages/contacts.html">Контакты</a>
-        </nav>
-        
+        <h1>Новости</h1>   
     </header>
+
     <main>
+        <section class="news">
             <article>
-                <h1>Моя первая веб-страница</h1>
-                <section>
-                    <h2>Немного обо мне</h2>
-                    <figure>
-                        <img src="images/я.jpg" alt="Мое фото" width="250" height="320">
-                        <figcaption>Это я</figcaption>
-                    </figure>
-                    <p>Меня зовут Ксю. Мне 25 лет. Я работаю <strong>ведущим инженером</strong> по сопровождению баз данных.</p>
-                    <p>Живу в Москве. Люблю читать книги, особенно <a href="https://ru.wikipedia.org/wiki/Кинг,_Стивен" target="_blank">Стивена Кинга</a></p>
-                    <p>У нас с мужем есть небольшой магазинчик по продаже плюшевых мишек.</p>
-                </section>
-                <section>
-                    <h2>Чему я хочу научиться</h2>
-                    <p>На курсе по <em>Web-разработке</em> я хотела бы научиться создавать сайты с нуля.</p>
-                </section>  
+                <a href="#">
+                    <h2>Опубликован рейтинг самых тонких ноутбуков</h2>
+                </a>
+                <div class="article-meta">
+                    Опубликовано на <a href="https://butop.ru/samye-tonkie-noutbuki/">Butop.ru</a>
+                    13 июня 2020
+                </div>
+                <img src="https://images.unsplash.com/photo-1583418855863-858dc79c2d19?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80">
+                <p>Существуют модели, которые обладают малыми габаритами, имеющие необходимые компоненты и легко справляются с первостепенными задачами. 
+                    Статья помогает найти самые тонкие ноутбуки 2021 года. Они обладают «хорошим железом», которое вас порадует.</p>
             </article>
+
+            <article>
+                <a href="#">
+                    <h2>Компания Adhawk разработала очки с отслеживанием взгляда с новой технологией</h2>
+                </a>
+                <div class="article-meta">
+                    Опубликовано на <a href="https://mixed.de/eyetracking-diese-brille-erfasst-blicke-ohne-kameras/">vrdigest.ru</a>
+                    1 матра 2020
+                </div>
+                <img src="https://images.unsplash.com/photo-1589125703066-5da8ad0c2cdb?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80">
+                <p>Отслеживание взгляда — ключевая технология для очков виртуальной и дополненной реальности. 
+                    Компания Adhawk нашла особенно энергоэффективное и компактное решение для отслеживания взгляда, которое работает без камер.</p>
+            </article>
+
+            <article>
+                <a href="#">
+                    <h2>9 технологических аксессуаров, о которых можно сказать: "Стиль кроется в деталях"</h2>
+                </a>
+                <div class="article-meta">
+                    Опубликовано на <a href="https://onedio.ru/news/9-tehnologicheskih-aksessuarov-o-kotoryh-mozhno-skazat-stil-kroetsya-v-detalyah-16924">onedio.ru</a>
+                    5 марта 2021
+                </div>
+                <img src="https://images.unsplash.com/photo-1603946877690-d410437c29aa?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80">
+                <p>Аксессуары, безусловно, имеют значение. Уже хотя бы по той простой причине, что они гармонично дополняют наш неповторимый образ. 
+                    Поэтому имеет смысл подойти к этому вопросу творчески и выбрать те новые варианты, которые предлагают современные технологии.</p>
+            </article>
+
+            <article>
+                <a href="#">
+                    <h2>Где купить PS5 в марте?</h2>
+                </a>
+                <div class="article-meta">
+                    Опубликовано на <a href="https://ps5playstation5.ru/category/novosti/">ps5playstation5.ru</a>
+                    10 матра 2021
+                </div>
+                <img src="https://images.unsplash.com/photo-1616341317041-cf93b2389ef5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80">
+                <p>По сравнению с февралем ситуация не изменилась. Стало известно, что в DNS перестанут принимать предзаказы. 
+                    Поэтому, единственный вариант сейчас купить PS5 на Авито. Цен пока те же, но говорят, что скоро их поднимут.</p>
+            </article>
+
+            <article>
+                <a href="#">
+                    <h2>Все краски мира: ТОП-5 отличных мониторов для работы с графикой</h2>
+                </a>
+                <div class="article-meta">
+                    Опубликовано на  <a href="https://zen.yandex.ru/media/id/5e95a5c318bc2307840c837a/vse-kraski-mira-top5-otlichnyh-monitorov-dlia-raboty-s-grafikoi-5ebad2c4c7c480495abfd8d4">zen.yandex.ru</a>
+                    7 января 2021
+                </div>
+                <img src="https://images.unsplash.com/photo-1610366398516-46da9dec5931?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1130&q=80">
+                <p>Монитор — это ваши глаза. И если для повседневного монитора не обязательно зрение, как у орла, 
+                    то профессиональные мониторы для дизайнеров, фотографов и монтажеров видео должны отвечать ряду требований. 
+                    А именно иметь широкий цветовой охват sRGB и Adobe RGB, IPS матрицу с не слишком быстрым временем отклика и, 
+                    в идеале, иметь регулируемую подставку, которая позволит установить монитор в максимально комфортном для работы положении.</p>
+            </article>
+        </section>
     </main>
 
     <footer>
-        <span>&copy;&nbsp;ShK</span>
-        <!-- Поле навигации -->
-        <nav>
-            <a href="#">Главная</a>
-            <a href="pages/about.html">О нас</a>
-            <a href="pages/contacts.html">Контакты</a>
-        </nav>
+        <div class="links">
+            <a href="#">Вакансии</a>
+            <a href="#">Контакты</a>
+            <a href="#">О нас</a>
+            <a href="#">Реклама</a>
+        </div>
+
+        <div class="copyright">Copyright &copy; БыстроНовости 2020
+
+        </div>
     </footer>
 </body>
 </html>
