--- a/site/index.html
+++ b/site/index.html
@@ -1,97 +1,205 @@
 <!DOCTYPE html>
-<html lang="ru">
-<head>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <title>БыстроНовости</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <header> 
-        <h1>Новости</h1>   
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="stylesheet" href="bootstrap.js">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/media.css">
+
+    <title>WD</title>
+  </head>
+
+
+  <body>
+    <header class="section section_first" id="main">
+        <div class="container header_container">
+            <div class="row">
+                <div class="col-lg-2 col-md-1 p-0 logo">
+                     <a href="#"><img src="images/WD.png" alt="WD"></a>
+                </div>
+                <div class="col-lg-10 col-md-11 menu">
+                    <ul class="nav nav_menu">
+                        <li class="nav-item menu__list"><a href="#main" class="nav-link active"> ГЛАВНАЯ</a></li>
+                        <li class="nav-item menu__list"><a href="#about_me" class="nav-link"> ОБ АВТОРЕ</a></li>
+                        <li class="nav-item menu__list"><a href="#my_skills" class="nav-link"> РАБОТЫ</a></li>
+                        <li class="nav-item menu__list"><a href="#about_work" class="nav-link"> ПРОЦЕСС</a></li>
+                        <li class="nav-item menu__list"><a href="#contacts" class="nav-link"> КОНТАКТЫ</a></li>
+                    </ul>
+                </div>
+            </div>
+           <div class="row header_row">  
+                <div class="col-lg-6 col-md-12 img_notebook d-flex"> 
+                    <img class="notebook" src="images/Frame.png" alt="Frame"> 
+                </div> 
+                <div class="col-lg-6 col-md-12 main_info">
+                    <h1 class="main_headline">Дизайн и верстка</h1>
+                    <p class="loren_ipsum">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. 
+                            Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+                    <button class="button button_write">Написать мне</button>
+                </div>
+            </div> 
+        </div>
     </header>
-
     <main>
-        <section class="news">
-            <article>
-                <a href="#">
-                    <h2>Опубликован рейтинг самых тонких ноутбуков</h2>
-                </a>
-                <div class="article-meta">
-                    Опубликовано на <a href="https://butop.ru/samye-tonkie-noutbuki/">Butop.ru</a>
-                    13 июня 2020
+        <section class="section section_second" id="about_me">
+            <div class="container about_container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h2 class="about_me_headline">Обо мне</h2>
+                    </div>
+                    <div class="col-lg-12 about_me d-flex justify-content-center">
+                        <p class="loren_ipsum">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэбдизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+                    </div>
                 </div>
-                <img src="https://images.unsplash.com/photo-1583418855863-858dc79c2d19?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80">
-                <p>Существуют модели, которые обладают малыми габаритами, имеющие необходимые компоненты и легко справляются с первостепенными задачами. 
-                    Статья помогает найти самые тонкие ноутбуки 2021 года. Они обладают «хорошим железом», которое вас порадует.</p>
-            </article>
-
-            <article>
-                <a href="#">
-                    <h2>Компания Adhawk разработала очки с отслеживанием взгляда с новой технологией</h2>
-                </a>
-                <div class="article-meta">
-                    Опубликовано на <a href="https://mixed.de/eyetracking-diese-brille-erfasst-blicke-ohne-kameras/">vrdigest.ru</a>
-                    1 матра 2020
+            </div>
+        </section>
+        <section class="section section_third">
+            <div class="container logo-container">
+                <div class="row">
+                    <div class="col-lg-12 logo_project_row d-flex justify-content-around">
+                        <img class="logo_project" src="images/numbers__item.png" alt="Frame">
+                        <img class="logo_project" src="images/numbers__item.png" alt="Frame">
+                        <img class="logo_project" src="images/numbers__item.png" alt="Frame">
+                        <img class="logo_project" src="images/numbers__item.png" alt="Frame">
+                        <img class="logo_project" src="images/numbers__item.png" alt="Frame">
+                        <img class="logo_project" src="images/numbers__item.png" alt="Frame">
+                    </div>
                 </div>
-                <img src="https://images.unsplash.com/photo-1589125703066-5da8ad0c2cdb?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80">
-                <p>Отслеживание взгляда — ключевая технология для очков виртуальной и дополненной реальности. 
-                    Компания Adhawk нашла особенно энергоэффективное и компактное решение для отслеживания взгляда, которое работает без камер.</p>
-            </article>
-
-            <article>
-                <a href="#">
-                    <h2>9 технологических аксессуаров, о которых можно сказать: "Стиль кроется в деталях"</h2>
-                </a>
-                <div class="article-meta">
-                    Опубликовано на <a href="https://onedio.ru/news/9-tehnologicheskih-aksessuarov-o-kotoryh-mozhno-skazat-stil-kroetsya-v-detalyah-16924">onedio.ru</a>
-                    5 марта 2021
+            </div>
+        </section>
+        <section class="section section_fourth" id="my_skills">
+            <div class="container skills_container">
+                <div class="row row_skills">
+                    <div class="col-lg-6 col-md-12 my_skills align-self-center">
+                        <h2 class="my_skills_headline">Мои навыки</h2>
+                        <div class="skills-photoshop">
+                            <p class="skills-name">Adobe Photoshop</p>
+                            <div class="skills_progress">
+                                <img class="skills_progress_1" src="images/Rectangle 4.2.png" alt="Skills_progress">
+                                <img class="skills_progress_2" src="images/Rectangle 4.3.png" alt="Skills_progress">
+                            </div>
+                        </div>
+                        <div class="skills-photoshop">
+                            <p class="skills-name">Adobe Photoshop</p>
+                            <div class="skills_progress">
+                                <img class="skills_progress_1" src="images/Rectangle 4.2.png" alt="Skills_progress">
+                                <img class="skills_progress_2" src="images/Rectangle 4.3.png" alt="Skills_progress">
+                            </div>
+                        </div>  
+                        <div class="skills-photoshop">
+                            <p class="skills-name">Adobe Photoshop</p>
+                            <div class="skills_progress">
+                                <img class="skills_progress_1" src="images/Rectangle 4.2.png" alt="Skills_progress">
+                                <img class="skills_progress_2" src="images/Rectangle 4.3.png" alt="Skills_progress">
+                            </div>
+                        </div>      
+                    </div>
+                    <div class="col-lg-6 col-md-12">
+                        <img class="my_skills_img" src="images/Rectangle 3.png" alt="My_skills">
+                    </div>
                 </div>
-                <img src="https://images.unsplash.com/photo-1603946877690-d410437c29aa?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80">
-                <p>Аксессуары, безусловно, имеют значение. Уже хотя бы по той простой причине, что они гармонично дополняют наш неповторимый образ. 
-                    Поэтому имеет смысл подойти к этому вопросу творчески и выбрать те новые варианты, которые предлагают современные технологии.</p>
-            </article>
-
-            <article>
-                <a href="#">
-                    <h2>Где купить PS5 в марте?</h2>
-                </a>
-                <div class="article-meta">
-                    Опубликовано на <a href="https://ps5playstation5.ru/category/novosti/">ps5playstation5.ru</a>
-                    10 матра 2021
+            </div>
+        </section>
+        <section class="section section_fifth" id="about_work">
+            <div class="container work_container">
+                <div class="row">
+                    <div class="col-lg-12 about_work">
+                        <h2 class="about_work_headline">Как я работаю</h2>
+                    </div>
+                    <div class="col-lg-12 about_work d-flex justify-content-center">
+                        <p class="loren_ipsum">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэбдизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+                    </div>
+                    <div class="col-lg-12 about_work_video">
+                        <img class="work_video" src="images/Rectangle 5.png">
+                        <a href="#"><img class="play_logo" src="images/Vector.png" alt="Skills_progress"></a>
+                    </div>
                 </div>
-                <img src="https://images.unsplash.com/photo-1616341317041-cf93b2389ef5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80">
-                <p>По сравнению с февралем ситуация не изменилась. Стало известно, что в DNS перестанут принимать предзаказы. 
-                    Поэтому, единственный вариант сейчас купить PS5 на Авито. Цен пока те же, но говорят, что скоро их поднимут.</p>
-            </article>
-
-            <article>
-                <a href="#">
-                    <h2>Все краски мира: ТОП-5 отличных мониторов для работы с графикой</h2>
-                </a>
-                <div class="article-meta">
-                    Опубликовано на  <a href="https://zen.yandex.ru/media/id/5e95a5c318bc2307840c837a/vse-kraski-mira-top5-otlichnyh-monitorov-dlia-raboty-s-grafikoi-5ebad2c4c7c480495abfd8d4">zen.yandex.ru</a>
-                    7 января 2021
+            </div>
+        </section>
+        <section class="section section_work_image section_work_image_1 d-flex justify-content-center">
+             <img class="work_image" src="images/Rectangle 7.4.png">
+             <div class="work_image_special">
+                 <div class="image_with_background">
+                    <img class="work_image" src="images/Rectangle_7.5.png">
+                 </div>
+                 <img class="eye_img" src="images/view.png">
+             </div>
+             <img class="work_image" src="images/Rectangle 7.4.png">
+             <img class="work_image" src="images/Rectangle_7.5.png">
+        </section>
+        <section class="section section_work_image d-flex justify-content-center">
+            <img class="work_image" src="images/Rectangle_7.5.png">
+            <img class="work_image" src="images/Rectangle 7.4.png">
+            <img class="work_image" src="images/Rectangle_7.5.png">
+            <img class="work_image" src="images/Rectangle 7.4.png">
+        </section>
+        <section class="section section_sixth">
+            <div class="container microsoft_container">
+                <div class="row">
+                    <div class="col-lg-12 microsoft_line d-flex justify-content-around">
+                        <img class="microsoft_project" src="images/MS.png" alt="Microsoft">
+                        <img class="microsoft_project" src="images/MS.png" alt="Microsoft">
+                        <img class="microsoft_project" src="images/MS.png" alt="Microsoft">
+                        <img class="microsoft_project" src="images/MS.png" alt="Microsoft">
+                    </div>
                 </div>
-                <img src="https://images.unsplash.com/photo-1610366398516-46da9dec5931?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1130&q=80">
-                <p>Монитор — это ваши глаза. И если для повседневного монитора не обязательно зрение, как у орла, 
-                    то профессиональные мониторы для дизайнеров, фотографов и монтажеров видео должны отвечать ряду требований. 
-                    А именно иметь широкий цветовой охват sRGB и Adobe RGB, IPS матрицу с не слишком быстрым временем отклика и, 
-                    в идеале, иметь регулируемую подставку, которая позволит установить монитор в максимально комфортном для работы положении.</p>
-            </article>
+            </div>
+        </section>
+        <section class="section section_seventh">
+            <div class="container feedback_container">
+                <div class="row feedback_row">
+                    <div class="col-lg-12">
+                        <h2 class="feedback_headline">Хотите веб-сайт?</h2>
+                    </div>
+                    <div class="col-lg-12 feedback_content d-flex justify-content-center">
+                        <p class="loren_ipsum">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэбдизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+                    </div>
+                    <div class="col-lg-12 feedback_form d-flex justify-content-center">
+                        <form class="feedback_form">
+                            <div class="row justify-content-center">
+                              <div class="col-lg-6">
+                                <input type="text" class="name" placeholder="Ваше имя">
+                              </div>
+                              <div class="col-lg-6">
+                                <input type="email" class="email" placeholder="Ваш e-mail">
+                              </div>
+                              <div class="col-lg-12">
+                                <textarea class="message" id="message" rows="10" placeholder="Сообщение"></textarea>
+                              </div>
+                            </div>
+                            <button type="submit" class="btn submit_button">ОТПРАВИТЬ</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
-
-    <footer>
-        <div class="links">
-            <a href="#">Вакансии</a>
-            <a href="#">Контакты</a>
-            <a href="#">О нас</a>
-            <a href="#">Реклама</a>
-        </div>
-
-        <div class="copyright">Copyright &copy; БыстроНовости 2020
-
+    <footer class="section section_eighth" id="contacts">
+        <div class="container footer_container">
+            <div class="row">
+                <div class="col-lg-6 footer">
+                    <h3 class="author_headline">Иванов Иван</h3>
+                    <p class="coopyright">(с) 2018. Все права защищены.</p>
+                </div>
+                <div class="col-lg-6 align-self-center d-flex justify-content-end">
+                    <a href="#"><img class="vk_logo" src="images/vk.png" alt="vk_logo"></a>
+                    <a href="#"><img class="vk_logo" src="images/vk.png" alt="vk_logo"></a>
+                    <a href="#"><img class="vk_logo" src="images/vk.png" alt="vk_logo"></a>
+                </div>
+            </div>
         </div>
     </footer>
-</body>
+                    
+
+ <!-- jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+  </body>
 </html>
